--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: jeffreytse/jekyll-theme-yat
-title: YAT
+remote_theme: pages-themes/primer
+title: Primer
 
 gems:
    - jekyll-seo-tag
